<resources>
    <string name="app_name">Stylish Calculator</string>
    <string name="zero">0</string>
    <string name="result">=0</string>
    <string name="c">AC</string>
    <string name="seven">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="back"><![CDATA[>>]]></string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="doubleZero">00</string>
    <string name="percent">%</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="divide">/</string>
    <string name="multiply">×</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="a">00</string>
</resources>