<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:background="@color/white"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="end"
            android:inputType="textPersonName"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/btn"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:background="@color/black"
                android:text="@string/c" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/_1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backSpace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/back" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:textStyle="bold"
                android:text="@string/_8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/_5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/_2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/doubleZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/doubleZero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/percent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/_9" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/_6" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/_3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/dot" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/divide" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/plus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/minus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/btn"
                android:textStyle="bold"
                android:textSize="30sp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/equal" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>